# MCP-Packet-Tracer

./: .gitignore  CLAUDE.md  FUNCIONES-PT.md  README.md  V2-MCP-PACKETTRACER.pts  WIKI.md  deploy_to_pt.py  mkdocs.yml  pyproject.toml  test_bridge_functions.py
.github/workflows/: docs.yml
UI HELPER/: index.html  interface.js
docs/: advanced-features.md  architecture.md  cables.md  credits.md  devices.md  index.md  installation.md  ip-addressing.md  live-deploy.md  modules.md  quickstart.md  resources.md  routing.md  skill.md  templates.md  testing.md  tools.md
skill/: SKILL.md
src/packet_tracer_mcp/: server.py  settings.py
src/packet_tracer_mcp/adapters/mcp/: resource_registry.py  tool_registry.py
src/packet_tracer_mcp/application/dto/: requests.py
src/packet_tracer_mcp/application/use_cases/: apply_acl.py  apply_hardening.py  apply_interface_tuning.py  apply_switch_security.py  apply_vlan.py  plan_topology.py
src/packet_tracer_mcp/domain/models/: errors.py  hardening.py  interface_tuning.py  plans.py  requests.py  switch_security.py  vlans.py
src/packet_tracer_mcp/domain/rules/: device_rules.py  hardening_rules.py  interface_tuning_rules.py  nat_rules.py  switch_security_rules.py  vlan_rules.py
src/packet_tracer_mcp/shared/: constants.py
tests/: test_acl.py  test_full_build.py  test_generators.py  test_hardening.py  test_interface_tuning.py  test_ipv6.py  test_live_reconcile.py  test_regressions_runtime.py  test_switch_security.py  test_topology_diff.py  test_topology_shapes.py  test_validator.py  test_vlan.py  test_wireless.py
(+20 files in other folders)
